/**
 * 该文件为由脚本 `npm run test:demo` 自动生成，如需修改，执行脚本命令即可。请勿手写直接修改，否则会被覆盖
 */

import { mount } from '@vue/test-utils';
import baseVue from '@/progress/demos/base.vue';
import colorVue from '@/progress/demos/color.vue';
import mobileVue from '@/progress/demos/mobile.vue';
import textVue from '@/progress/demos/text.vue';
import typeVue from '@/progress/demos/type.vue';

const mapper = {
  baseVue,
  colorVue,
  mobileVue,
  textVue,
  typeVue,
};

describe('Progress', () => {
  Object.keys(mapper).forEach((demoName) => {
    it(`Progress ${demoName} demo works fine`, () => {
      const wrapper = mount(mapper[demoName]);
      expect(wrapper.element).toMatchSnapshot();
    });
  });
});
