// Vitest Snapshot v1

exports[`Progress > Progress baseVue demo works fine 1`] = `
<div
  data-v-0843df2e=""
>
  <div
    class="progress-demo progress-demo--margin"
    data-v-0843df2e=""
  >
    <div
      class="t-progress t-progress--status--undefined"
      data-v-0843df2e=""
    >
      <div
        class="t-progress__inner"
      >
        <div
          class="t-progress__bar"
        >
          <div
            class="t-progress__bar-percent"
            style="width: 0%;"
          />
        </div>
        <div
          class="t-progress__label"
        >
          0%
        </div>
      </div>
    </div>
  </div>
  <div
    class="progress-demo progress-demo--margin"
    data-v-0843df2e=""
  >
    <div
      class="t-progress t-progress--status--undefined"
      data-v-0843df2e=""
    >
      <div
        class="t-progress__inner"
      >
        <div
          class="t-progress__bar"
        >
          <div
            class="t-progress__bar-percent"
            style="width: 88%;"
          />
        </div>
        <div
          class="t-progress__label"
        >
          88%
        </div>
      </div>
    </div>
  </div>
  <div
    class="progress-demo progress-demo--margin"
    data-v-0843df2e=""
  >
    <div
      class="t-progress t-progress--status--success"
      data-v-0843df2e=""
    >
      <div
        class="t-progress__inner"
      >
        <div
          class="t-progress__bar"
        >
          <div
            class="t-progress__bar-percent"
            style="width: 100%;"
          />
        </div>
        <div
          class="t-progress__label"
        >
          100%
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Progress > Progress colorVue demo works fine 1`] = `
<div
  data-v-64db40fb=""
>
  <div
    class="progress-demo"
    data-v-64db40fb=""
  >
    <div
      class="t-progress t-progress--status--undefined"
      data-v-64db40fb=""
    >
      <div
        class="t-progress__inner"
      >
        <div
          class="t-progress__bar"
        >
          <div
            class="t-progress__bar-percent"
            style="width: 88%;"
          />
        </div>
        <div
          class="t-progress__label"
        >
          88%
        </div>
      </div>
    </div>
  </div>
  <div
    class="progress-demo"
    data-v-64db40fb=""
  >
    <div
      class="t-progress t-progress--status--error"
      data-v-64db40fb=""
    >
      <div
        class="t-progress__inner"
      >
        <div
          class="t-progress__bar"
        >
          <div
            class="t-progress__bar-percent"
            style="width: 88%;"
          />
        </div>
        <div
          class="t-progress__label"
        >
          88%
        </div>
      </div>
    </div>
  </div>
  <div
    class="progress-demo"
    data-v-64db40fb=""
  >
    <div
      class="t-progress t-progress--status--warning"
      data-v-64db40fb=""
    >
      <div
        class="t-progress__inner"
      >
        <div
          class="t-progress__bar"
        >
          <div
            class="t-progress__bar-percent"
            style="width: 88%;"
          />
        </div>
        <div
          class="t-progress__label"
        >
          88%
        </div>
      </div>
    </div>
  </div>
  <div
    class="progress-demo"
    data-v-64db40fb=""
  >
    <div
      class="t-progress t-progress--status--success"
      data-v-64db40fb=""
    >
      <div
        class="t-progress__inner"
      >
        <div
          class="t-progress__bar"
        >
          <div
            class="t-progress__bar-percent"
            style="width: 100%;"
          />
        </div>
        <div
          class="t-progress__label"
        >
          100%
        </div>
      </div>
    </div>
  </div>
  <div
    class="progress-demo"
    data-v-64db40fb=""
  >
    <div
      class="t-progress t-progress--status--undefined"
      data-v-64db40fb=""
    >
      <div
        class="t-progress__inner"
      >
        <div
          class="t-progress__bar"
        >
          <div
            class="t-progress__bar-percent"
            style="width: 88%;"
          />
        </div>
        <div
          class="t-progress__label"
        >
          88%
        </div>
      </div>
    </div>
    <div
      class="button-group"
      data-v-64db40fb=""
    >
      <button
        aria-disabled="false"
        class="t-button t-size-s t-button--outline t-button--primary t-button--shape-rectangle"
        data-v-64db40fb=""
        role="button"
      >
        <!---->
        <span
          class="t-button__text"
        >
          
          减少
          
        </span>
      </button>
      <div
        class="space"
        data-v-64db40fb=""
      />
      <button
        aria-disabled="false"
        class="t-button t-size-s t-button--base t-button--primary t-button--shape-rectangle"
        data-v-64db40fb=""
        role="button"
      >
        <!---->
        <span
          class="t-button__text"
        >
          
          增加
          
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Progress > Progress mobileVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
  data-v-6de369ba=""
>
  <h1
    class="title"
    data-v-6de369ba=""
  >
    Progress 进度条
  </h1>
  <p
    class="summary"
    data-v-6de369ba=""
  >
    展示操作的当前进度
  </p>
  <div
    class="tdesign-mobile-demo-block"
    data-v-6de369ba=""
  >
    <h2
      class="tdesign-mobile-demo-block__title"
    >
      01 类型
    </h2>
    <p
      class="tdesign-mobile-demo-block__summary"
    >
      基础进度条
    </p>
    
    <div
      data-v-0843df2e=""
      data-v-6de369ba=""
    >
      <div
        class="progress-demo progress-demo--margin"
        data-v-0843df2e=""
      >
        <div
          class="t-progress t-progress--status--undefined"
          data-v-0843df2e=""
        >
          <div
            class="t-progress__inner"
          >
            <div
              class="t-progress__bar"
            >
              <div
                class="t-progress__bar-percent"
                style="width: 0%;"
              />
            </div>
            <div
              class="t-progress__label"
            >
              0%
            </div>
          </div>
        </div>
      </div>
      <div
        class="progress-demo progress-demo--margin"
        data-v-0843df2e=""
      >
        <div
          class="t-progress t-progress--status--undefined"
          data-v-0843df2e=""
        >
          <div
            class="t-progress__inner"
          >
            <div
              class="t-progress__bar"
            >
              <div
                class="t-progress__bar-percent"
                style="width: 88%;"
              />
            </div>
            <div
              class="t-progress__label"
            >
              88%
            </div>
          </div>
        </div>
      </div>
      <div
        class="progress-demo progress-demo--margin"
        data-v-0843df2e=""
      >
        <div
          class="t-progress t-progress--status--success"
          data-v-0843df2e=""
        >
          <div
            class="t-progress__inner"
          >
            <div
              class="t-progress__bar"
            >
              <div
                class="t-progress__bar-percent"
                style="width: 100%;"
              />
            </div>
            <div
              class="t-progress__label"
            >
              100%
            </div>
          </div>
        </div>
      </div>
    </div>
    
  </div>
  <div
    class="tdesign-mobile-demo-block"
    data-v-6de369ba=""
  >
    <h2
      class="tdesign-mobile-demo-block__title"
    >
      02 状态
    </h2>
    <p
      class="tdesign-mobile-demo-block__summary"
    >
      默认状态
    </p>
    
    <div
      class="progress-demo"
      data-v-6de369ba=""
    >
      <div
        class="t-progress t-progress--status--undefined"
        data-v-6de369ba=""
      >
        <div
          class="t-progress__inner"
        >
          <div
            class="t-progress__bar"
          >
            <div
              class="t-progress__bar-percent"
              style="width: 88%;"
            />
          </div>
          <div
            class="t-progress__label"
          >
            88%
          </div>
        </div>
      </div>
    </div>
    
  </div>
  <div
    class="tdesign-mobile-demo-block"
    data-v-6de369ba=""
  >
    <!--v-if-->
    <p
      class="tdesign-mobile-demo-block__summary"
    >
      进度状态发生重大错误
    </p>
    
    <div
      class="progress-demo"
      data-v-6de369ba=""
    >
      <div
        class="t-progress t-progress--status--error"
        data-v-6de369ba=""
      >
        <div
          class="t-progress__inner"
        >
          <div
            class="t-progress__bar"
          >
            <div
              class="t-progress__bar-percent"
              style="width: 88%;"
            />
          </div>
          <div
            class="t-progress__label"
          >
            88%
          </div>
        </div>
      </div>
    </div>
    
  </div>
  <div
    class="tdesign-mobile-demo-block"
    data-v-6de369ba=""
  >
    <!--v-if-->
    <p
      class="tdesign-mobile-demo-block__summary"
    >
      进度中止
    </p>
    
    <div
      class="progress-demo"
      data-v-6de369ba=""
    >
      <div
        class="t-progress t-progress--status--warning"
        data-v-6de369ba=""
      >
        <div
          class="t-progress__inner"
        >
          <div
            class="t-progress__bar"
          >
            <div
              class="t-progress__bar-percent"
              style="width: 88%;"
            />
          </div>
          <div
            class="t-progress__label"
          >
            88%
          </div>
        </div>
      </div>
    </div>
    
  </div>
  <div
    class="tdesign-mobile-demo-block"
    data-v-6de369ba=""
  >
    <!--v-if-->
    <p
      class="tdesign-mobile-demo-block__summary"
    >
      进度完成
    </p>
    
    <div
      class="progress-demo"
      data-v-6de369ba=""
    >
      <div
        class="t-progress t-progress--status--success"
        data-v-6de369ba=""
      >
        <div
          class="t-progress__inner"
        >
          <div
            class="t-progress__bar"
          >
            <div
              class="t-progress__bar-percent"
              style="width: 100%;"
            />
          </div>
          <div
            class="t-progress__label"
          >
            100%
          </div>
        </div>
      </div>
    </div>
    
  </div>
  <div
    class="tdesign-mobile-demo-block"
    data-v-6de369ba=""
  >
    <!--v-if-->
    <p
      class="tdesign-mobile-demo-block__summary"
    >
      过渡样式
    </p>
    
    <div
      class="progress-demo"
      data-v-6de369ba=""
    >
      <div
        class="t-progress t-progress--status--undefined"
        data-v-6de369ba=""
      >
        <div
          class="t-progress__inner"
        >
          <div
            class="t-progress__bar"
          >
            <div
              class="t-progress__bar-percent"
              style="width: 88%;"
            />
          </div>
          <div
            class="t-progress__label"
          >
            88%
          </div>
        </div>
      </div>
      <div
        class="button-group"
        data-v-6de369ba=""
      >
        <button
          aria-disabled="false"
          class="t-button t-size-s t-button--outline t-button--primary t-button--shape-rectangle"
          data-v-6de369ba=""
          role="button"
        >
          <!---->
          <span
            class="t-button__text"
          >
            
            减少
            
          </span>
        </button>
        <div
          class="space"
          data-v-6de369ba=""
        />
        <button
          aria-disabled="false"
          class="t-button t-size-s t-button--base t-button--primary t-button--shape-rectangle"
          data-v-6de369ba=""
          role="button"
        >
          <!---->
          <span
            class="t-button__text"
          >
            
            增加
            
          </span>
        </button>
      </div>
    </div>
    
  </div>
  <div
    class="tdesign-mobile-demo-block"
    data-v-6de369ba=""
  >
    <!--v-if-->
    <p
      class="tdesign-mobile-demo-block__summary"
    >
      自定义颜色
    </p>
    
    <div
      class="progress-demo"
      data-v-3a2a3c52=""
      data-v-6de369ba=""
    >
      <div
        class="t-progress t-progress--status--undefined"
        data-v-3a2a3c52=""
      >
        <div
          class="t-progress__inner"
        >
          <div
            class="t-progress__bar"
            style="background-color: rgb(234, 201, 255);"
          >
            <div
              class="t-progress__bar-percent"
              style="width: 88%; background: rgb(205, 4, 255);"
            />
          </div>
          <div
            class="t-progress__label"
          >
            
            <span
              class="label--color"
              data-v-3a2a3c52=""
            >
              88%
            </span>
            
          </div>
        </div>
      </div>
    </div>
    
  </div>
  <div
    class="tdesign-mobile-demo-block"
    data-v-6de369ba=""
  >
    <h2
      class="tdesign-mobile-demo-block__title"
    >
      03 规格
    </h2>
    <p
      class="tdesign-mobile-demo-block__summary"
    >
      带数值进度条
    </p>
    
    <div
      class="progress-demo"
      data-v-6de369ba=""
    >
      <div
        class="t-progress t-progress--status--undefined"
        data-v-6de369ba=""
      >
        <div
          class="t-progress__inner"
        >
          <div
            class="t-progress__bar"
          >
            <div
              class="t-progress__bar-percent"
              style="width: 88%;"
            />
          </div>
          <div
            class="t-progress__label"
          >
            88%
          </div>
        </div>
      </div>
    </div>
    
  </div>
  <div
    class="tdesign-mobile-demo-block"
    data-v-6de369ba=""
  >
    <!--v-if-->
    <p
      class="tdesign-mobile-demo-block__summary"
    >
      无数值进度条
    </p>
    
    <div
      class="progress-demo"
      data-v-6de369ba=""
    >
      <div
        class="t-progress t-progress--status--undefined"
        data-v-6de369ba=""
      >
        <div
          class="t-progress__inner"
        >
          <div
            class="t-progress__bar"
          >
            <div
              class="t-progress__bar-percent"
              style="width: 88%;"
            />
          </div>
          <!--v-if-->
        </div>
      </div>
    </div>
    
  </div>
</div>
`;

exports[`Progress > Progress textVue demo works fine 1`] = `
<div
  data-v-26a7c0c5=""
>
  <div
    class="progress-demo"
    data-v-26a7c0c5=""
  >
    <div
      class="t-progress t-progress--status--undefined"
      data-v-26a7c0c5=""
    >
      <div
        class="t-progress__inner"
      >
        <div
          class="t-progress__bar"
        >
          <div
            class="t-progress__bar-percent"
            style="width: 88%;"
          />
        </div>
        <div
          class="t-progress__label"
        >
          88%
        </div>
      </div>
    </div>
  </div>
  <div
    class="progress-demo"
    data-v-26a7c0c5=""
  >
    <div
      class="t-progress t-progress--status--undefined"
      data-v-26a7c0c5=""
    >
      <div
        class="t-progress__inner"
      >
        <div
          class="t-progress__bar"
        >
          <div
            class="t-progress__bar-percent"
            style="width: 88%;"
          />
        </div>
        <!--v-if-->
      </div>
    </div>
  </div>
</div>
`;

exports[`Progress > Progress typeVue demo works fine 1`] = `
<div
  class="progress-demo"
  data-v-3a2a3c52=""
>
  <div
    class="t-progress t-progress--status--undefined"
    data-v-3a2a3c52=""
  >
    <div
      class="t-progress__inner"
    >
      <div
        class="t-progress__bar"
        style="background-color: rgb(234, 201, 255);"
      >
        <div
          class="t-progress__bar-percent"
          style="width: 88%; background: rgb(205, 4, 255);"
        />
      </div>
      <div
        class="t-progress__label"
      >
        
        <span
          class="label--color"
          data-v-3a2a3c52=""
        >
          88%
        </span>
        
      </div>
    </div>
  </div>
</div>
`;
